--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 <body>
 
     <table id=""></table>
-    <h1 id="titulo">Buen dia</h1>
+    <h1 id="titulo">Buen dia <span> bienvenidos </span></h1>
     <div>
         <h2> Las mejores opciones</h2>
-        <form id="formularioUsuario" action="">
-            <input type="text" placeholder="nombre" id="nombre" autocomplete="off">
-            <input type="text" name="" id="apellido" placeholder="apellido" autocomplete="off">
-            <button type="sumbit">Enviar</button> 
+        <form action="">
+            <input type="text" name="usuario" id="usuario" placeholder="Usuario" autocomplete="off">
+            <input type="password" name="contraseña" id="contraseña" placeholder="contraseña">
+            <input type="button" value="Iniciar sesion" id="boton" onclick="login()">
+            
+            <p class="parrafo"> un parrafo</p>
         </form>
+        <p class="parrafo">segundo parrafo</p>
         
-        <p id="saludoUsuario"></p>
-
-        <button id="logout">Cerrar sesion</button>
         <ul>
             <li>Monitores</li>
             <li>PC</li>
